# exaro

./: CMakeLists.txt  CodingStyle.md  INSTALL  ProjectHome.md  SetPaths.cmake  compile_report  exaro.kdevelop  exaro.kdevses  exaro.pro
apps/: apps.pro
apps/designer/: CMakeLists.txt  aboutdialog.ui  command.cpp  command.h  designer.pro  designerdataseteditor.cpp  designerdataseteditor.h  designerdataseteditor.ui  designerpage.cpp  designerpage.h  designerquerywidget.cpp  designerquerywidget.h  designerquerywidget.ui  designerscriptwidget.cpp  designerscriptwidget.h  designeruitype.ui  designeruiwidget.cpp  exaro.desktop  exaro.nsi  exaroapplication.cpp  fieldswizardpage.cpp  fieldswizardpage.h  fieldswizardpage.ui  groupwizardpage.cpp  groupwizardpage.ui  itemselection.cpp  itemselection.h  itemstoolbar.cpp  itemstoolbar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namevalidator.cpp  newdatasetdialog.cpp  newdatasetdialog.h  newdatasetdialog.ui  objectmodel.cpp  options.cpp  options.h  (+25 more)
apps/designer/editor/: scripthighlighter.cpp  scripthighlighter.h
apps/designer/images/: exaro_Bands.xcf  exaro_Shapes.xcf  exaro_Text.xcf
apps/designer/plugins/toolbars/font/: fonttoolbar.cpp  fonttoolbar.h
apps/designer/plugins/toolbars/lib/: toolbarinterface.cpp  toolbarinterface.h
cmake/modules/: FindExaro.cmake
debian/: changelog  control  exaro.install  rules
examples/: Music_1.bdrt  Music_2.bdrt  base.db  data.csv  music.db  report_1.bdrt  report_2.bdrt
examples/music/: CMakeLists.txt  main.cpp  music.db  musicReport.bdrt  musicReport_1.bdrt
libs/: libs.pro
libs/propertyEditor/: propertyEditor.pro  propertyeditor.cpp  propertymodel.cpp  propertymodel.h
libs/quazip/: quazip.pro
libs/report/: CMakeLists.txt  bandinterface.cpp  bandinterface.h  bandtitle.cpp  bandtitle.h  dataset.cpp  dataset.h  dataseteditor.cpp  dataseteditor.h  document.cpp  document.h  exaro.cpp  exaro.h  exaroexports.h  exportinterface.cpp  exportinterface.h  fakepaintdevice.cpp  fakepaintdevice.h  fakepaintengine.cpp  fakepaintengine.h  globals.cpp  globals.h  grid.cpp  grid.h  itemhelper.cpp  itemhelper.h  iteminterface.cpp  iteminterface.h  iteminterfaceext.cpp  iteminterfaceext.h  layoutmanager.cpp  layoutmanager.h  message.cpp  message.h  page.cpp  page.h  pagegraphicsitem.cpp  pageinterface.cpp  pageinterface.h  paintdevice.cpp  (+22 more)
libs/zint/: zint.pro
libs/zint/backend_qt4/: backend_qt4.pro
libs/zint/frontend/: test.sh
plugins/: CMakeLists.txt  plugins.pro
plugins/propertyEditor/bool/: bool.pro
plugins/propertyEditor/brush/: brush.pro
plugins/propertyEditor/color/: color.pro
plugins/propertyEditor/flags/: flags.pro
plugins/propertyEditor/font/: font.pro
plugins/propertyEditor/metricfont/: metricfont.pro
plugins/propertyEditor/numbers/: numbers.pro
plugins/propertyEditor/pen/: pen.pro
plugins/propertyEditor/pixmap/: pixmap.pro
plugins/propertyEditor/size/: size.pro
plugins/propertyEditor/sizef/: sizef.pro
plugins/propertyEditor/stringlist/: stringlist.pro
plugins/report/: CMakeLists.txt  report.pro
plugins/report/bands/detail/: CMakeLists.txt  detail.cpp  detail.h  detail.pro
plugins/report/bands/detailFooter/: CMakeLists.txt  detailfooter.cpp  detailfooter.h
plugins/report/bands/pageFooter/: CMakeLists.txt  pageFooter.pro  pagefooter.cpp  pagefooter.h
plugins/report/bands/title/: CMakeLists.txt  title.cpp  title.h  title.pro
plugins/report/dataset/csv/: CMakeLists.txt  csvdataset.cpp  csvdataset.h  csvdataseteditor.cpp  csvdataseteditor.h  csvdataseteditor.ui  model.cpp  model.h
plugins/report/dataset/sql/: CMakeLists.txt  sqldataset.cpp  sqldataset.h  sqldataseteditor.cpp  sqldataseteditor.h  sqldataseteditor.ui
plugins/report/export/: CMakeLists.txt
plugins/report/export/csvTxt/: CMakeLists.txt  csvTxt.pro  csvtxt.cpp  exportSettingsDialog_mobile.ui  exportsettingsdialog.cpp  exportsettingsdialog.h
plugins/report/export/html/: CMakeLists.txt  html.cpp  html.pro
plugins/report/export/ods/: CMakeLists.txt  ods.cpp  ods.h  ods.pro
plugins/report/items/: CMakeLists.txt  items.pro
plugins/report/items/arc/: CMakeLists.txt  arc.cpp  arc.h
plugins/report/items/barcode/: CMakeLists.txt  barcode.cpp  barcode.h  barcode.pro
plugins/report/items/charts/: CMakeLists.txt  charts.pro
plugins/report/items/charts/barchart/: CMakeLists.txt  barchart.cpp  barchart.h  barchart.pro
plugins/report/items/charts/chartcontainer/: CMakeLists.txt  chartcontainer.cpp  chartcontainer.h
plugins/report/items/charts/chartinterface/: CMakeLists.txt  chartdatacollector.cpp  chartdatacollector.h  chartinterface.cpp  chartinterface.h
plugins/report/items/charts/legend/: CMakeLists.txt  legend.cpp
plugins/report/items/charts/piechart/: CMakeLists.txt  piechart.cpp  piechart.h  piechart.pro  piechart.qrc  qtdata.cht
plugins/report/items/chord/: CMakeLists.txt  chord.cpp  chord.h  chord.pro
plugins/report/items/elipse/: elipse.qrc  ellipse.cpp
plugins/report/items/ellipse/: CMakeLists.txt  ellipse.cpp  ellipse.h  ellipse.pro
plugins/report/items/field/: CMakeLists.txt  field.cpp  field.h  field.pro
plugins/report/items/formula/: formula.cpp
plugins/report/items/htmlscript/: CMakeLists.txt  htmlscript.cpp  htmlscript.h  htmlscript.pro
plugins/report/items/line/: CMakeLists.txt  line.cpp  line.h
plugins/report/items/memo/: CMakeLists.txt  memo.cpp  memo.h  memohelper.cpp  memohelper.h  memohelper.ui
plugins/report/items/picture/: CMakeLists.txt  picture.cpp  picture.h  picture.pro
plugins/report/items/pie/: CMakeLists.txt  pie.cpp  pie.h
plugins/report/items/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.h  rectangle.pro
plugins/report/items/script/: CMakeLists.txt  script.cpp  script.h
plugins/report/items/text/: CMakeLists.txt  text.cpp  text.h  text.pro
templates/: h
translations/: exaro_ar_DZ.ts  exaro_fr_FR.ts  exaro_it_IT.ts  exaro_ro_RO.ts  exaro_ru_RU.ts  exaro_ru_UA.ts  prepare.sh
trunk/: compile_report.bat  compile_report_macosx  exaro.kdevelop
trunk/translations/: install.sh  prepare.sh
(+110 files in other folders)
